# Habana_Custom_Kernel

./: CMakeLists.txt  README.md
custom_outer/: __init__.py  custom_outer.py  custom_outer_test.py  hpu_custom_outer.cpp  run.sh  setup.py
doc/: tpc-intrinsics.h
kernels/gaudi/: add_f32.c  avg_pool_2d_bwd_f32.c  avg_pool_2d_fwd_f32.c  batch_norm_fwd_f32.c  bitonic_sort_datain_dataout.c  cast_bf16_to_f32.c  cast_f32_to_bf16.c  customdiv_fwd_f32.c  filter_fwd_2d_bf16.c  gather_fwd_dim0_i32.c  gather_fwd_dim1_i32.c  kl_div_bwd_bf16.c  kl_div_bwd_f32.c  kl_div_fwd_bf16.c  kl_div_fwd_f32.c  leakyrelu_f32_gaudi.c  matrix_mul_fwd_f32.c  printf_test.c  relu6_bwd_bf16.c  relu6_bwd_f32.c  relu6_fwd_bf16.c  relu6_fwd_f32.c  relu_bwd_bf16.c  relu_bwd_f32.c  relu_fwd_bf16.c  relu_fwd_f32.c  searchsorted_bwd_f32.c  searchsorted_fwd_f32.c  sin_f32.c  softmax_fcd_bf16.c  softmax_non_fcd_bf16.c  sparse_lengths_sum_bf16_2D_f32_embed.c  spatial_conv_f32.c
kernels/gaudi2/: add_f32_gaudi2.c  avg_pool_2d_bwd_f32_gaudi2.c  avg_pool_2d_fwd_f32_gaudi2.c  cast_f16_to_i16_gaudi2.c  mygather_fwd_bf16_gaudi2.c  mygather_where_bf16_gaudi2.c  mygather_where_f32_gaudi2.c  outer_product_fwd_f32_gaudi2.c  pscan_bf16_gaudi2.c  pscan_combined_bf16_gaudi2.c  pscan_combined_f32_gaudi2.c  pscan_f32_gaudi2.c  pscan_update_f32_gaudi2.c  reinterpret_fwd_i32.c  (+15 more)
reinterpret_test/: hpu_custom_reinterpret.cpp  kernel_test.py  setup.py
scripts/: parse_trace_event_format_to_csv.py  run_kernel_perf_test.py
src/: CMakeLists.txt  batch_norm_f32.hpp  cast.cpp  cast.hpp  cast_gaudi.hpp  customdiv_fwd_f32.cpp  customdiv_fwd_f32.hpp  entry_points.cpp  entry_points.hpp  filter_2d_f32.cpp  filter_2d_f32.hpp  filter_2d_i8_w33_s11.hpp  leakyrelu_f32.hpp  leakyrelu_f32_gaudi.cpp  leakyrelu_f32_gaudi.hpp  printf_test.cpp  reduction_fcd_tab.cpp  reduction_fcd_tab.hpp  relu6_all.cpp  softmax_bf16.cpp  softmax_bf16.hpp  softmax_f32.cpp  softmax_f32.hpp  sparse_lengths_sum.cpp  sparse_lengths_sum.hpp  sparse_lengths_sum_bf16.cpp  sparse_lengths_sum_bf16.hpp  spatial_reduction_kernels.cpp  spatial_reduction_kernels.hpp
src/gaudi2_src/: add_f32_gaudi2.cpp  add_f32_gaudi2.hpp  avg_pool_2d_f32_gaudi2.cpp  avg_pool_2d_f32_gaudi2.hpp  cast_f16_to_i16_gaudi2.cpp  cast_f16_to_i16_gaudi2.hpp  mygather_gaudi2.cpp  mygather_gaudi2.hpp  mygather_where_gaudi2.cpp  mygather_where_gaudi2.hpp  outer_product_fwd_f32_gaudi2.cpp  outer_product_fwd_f32_gaudi2.hpp  pscan_combined_gaudi2.cpp  pscan_combined_gaudi2.hpp  pscan_gaudi2.cpp  pscan_gaudi2.hpp  pscan_update_gaudi2.cpp  pscan_update_gaudi2.hpp  reinterpret_fwd_i32.cpp  reinterpret_fwd_i32.hpp  relu_all_gaudi2.cpp  relu_all_gaudi2.hpp  selective_state_update_gaudi2.cpp  selective_state_update_gaudi2.hpp  softmax_bf16_gaudi2.cpp  softmax_bf16_gaudi2.hpp  user_lut_gaudi2.cpp  user_lut_gaudi2.hpp
src/gaudi3_src/: mamba_pscan_gaudi3.cpp  mamba_pscan_gaudi3.hpp  mamba_pscan_update_gaudi3.cpp  mamba_pscan_update_gaudi3.hpp  mygather_gaudi3.cpp  mygather_gaudi3.hpp  mygather_where_gaudi3.cpp  mygather_where_gaudi3.hpp
src/gaudi_src/: add_f32.cpp  add_f32.hpp  avg_pool_2d_f32.cpp  avg_pool_2d_f32.hpp  avg_pool_2d_fwd_f32.cpp  avg_pool_2d_fwd_f32.hpp  batch_norm_f32.cpp  batch_norm_f32.hpp  bitonic_sort_f32.cpp  bitonic_sort_f32.hpp  cast_gaudi.cpp  cast_gaudi.hpp  customdiv_fwd_f32.cpp  customdiv_fwd_f32.hpp  filter_fwd_2d_bf16.cpp  filter_fwd_2d_bf16.hpp  gather_fwd_i32.cpp  gather_fwd_i32.hpp  kl_div_all.cpp  kl_div_all.hpp  leakyrelu_f32_gaudi.cpp  leakyrelu_f32_gaudi.hpp  matrix_mul_fwd_f32.cpp  matrix_mul_fwd_f32.hpp  printf_test.cpp  printf_test.hpp  relu6_all.cpp  relu6_all.hpp  searchsorted_f32.cpp  searchsorted_f32.hpp  sin_f32.cpp  sin_f32.hpp  softmax_bf16.cpp  softmax_bf16.hpp  sparse_lengths_sum_bf16.cpp  sparse_lengths_sum_bf16.hpp  spatial_conv_f32.cpp  spatial_conv_f32.hpp
src/goya_src/: filter_2d_i8_w33_s11.cpp  leakyrelu_f32.cpp  softmax_f32.cpp
tests/: CMakeLists.txt  batchnorm_f32_test.cpp  bfloat16.h  cast_gaudi_test.cpp  cast_test.hpp  customdiv_fwd_f32_test.cpp  customdiv_fwd_f32_test.hpp  filter_2d_i8_w33_s11_test.hpp  filter_fwd_2d_bf16_test.hpp  float16.cpp  float16.h  leakyrelu_f32_test.hpp  printf.cpp  printf.hpp  printf_tests.hpp  relu6_all_test.cpp  softmax_bf16_test.cpp  sparse_lengths_sum_test.hpp  tensor.h  test_base.cpp  test_base.hpp  test_base_tpc_callback.cpp  test_base_tpc_callback.hpp  tests_main.cpp  tpc_elf_api.hpp  tpc_test_core_api.h
tests/gaudi2_test/: avg_pool_2d_f32_gaudi2_test.cpp  avg_pool_2d_f32_gaudi2_test.hpp  cast_f16_to_i16_gaudi2_test.cpp  cast_f16_to_i16_gaudi2_test.hpp  mygather_gaudi2_test.cpp  mygather_gaudi2_test.hpp  pscan_gaudi2_test.cpp  pscan_gaudi2_test.hpp  pscan_update_gaudi2_test.cpp  pscan_update_gaudi2_test.hpp  selective_state_update_gaudi2_test.cpp  selective_state_update_gaudi2_test.hpp  softmax_bf16_gaudi2_test.cpp  softmax_bf16_gaudi2_test.hpp  user_lut_gaudi2_test.cpp  user_lut_gaudi2_test.hpp
tests/gaudi3_test/: mamba_pscan_gaudi3_test.cpp  mamba_pscan_gaudi3_test.hpp  mamba_pscan_update_gaudi3_test.cpp  mamba_pscan_update_gaudi3_test.hpp
tests/gaudi_test/: add_f32_test.cpp  add_f32_test.hpp  avg_pool_2d_f32_test.cpp  avg_pool_2d_f32_test.hpp  avg_pool_2d_fwd_f32_test.cpp  avg_pool_2d_fwd_f32_test.hpp  batchnorm_f32_test.cpp  batchnorm_f32_test.hpp  bitonic_sort_f32_test.cpp  bitonic_sort_f32_test.hpp  cast_gaudi_test.cpp  cast_gaudi_test.hpp  customdiv_fwd_f32_test.cpp  customdiv_fwd_f32_test.hpp  filter_fwd_2d_bf16_test.cpp  gather_fwd_i32_test.cpp  gather_fwd_i32_test.hpp  kl_div_all_test.cpp  kl_div_all_test.hpp  leakyrelu_f32_gaudi_test.cpp  leakyrelu_f32_gaudi_test.hpp  matrix_mul_fwd_f32_test.cpp  matrix_mul_fwd_f32_test.hpp  printf_tests.hpp  relu6_all_test.cpp  relu6_all_test.hpp  searchsorted_f32_test.cpp  searchsorted_f32_test.hpp  sin_f32_test.cpp  sin_f32_test.hpp  softmax_bf16_test.cpp  softmax_bf16_test.hpp  sparse_lengths_sum_bf16_test.cpp  sparse_lengths_sum_bf16_test.hpp  spatial_conv_f32_test.cpp  spatial_conv_f32_test.hpp
tests/goya_test/: filter_2d_f32_test.hpp  softmax_f32_test.hpp
(+40 files in other folders)
